<resources>
    <string name="app_name">serveasy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="feedback_message">Please give us your value able feedback!</string>
    <string name="title_activity_main">serveasy</string>
    <string name="nav_heading">Technician</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="select_service">Select Service</string>
    >
    <string name="select_city">Select City</string>
    <string name="select_gender">Select Gender</string>
    <string name="rate_us">Rate Us:</string>
    <string name="complain_text">Please type your service</string>
    <string name="type_message">Enter your message(Optional)</string>
    <string name="type_feed_back">Enter your feedback(Optional)</string>

    <!--FRAGMENT NAMES-->
    <string name="terms_and_conditions">T&amp;C</string>
    <string name="feedback">Feedback</string>
    <string name="service">Services</string>
    <string name="quote">Please fill following fields</string>
    <string name="btn_submit">Submit</string>

    <string name="userName">Username:</string>


    <!--Place holders-->
    <string name="phone_place_holder">Phone no (03*********)</string>
    <string name="email_place_holder">Enter your email</string>
    <string name="message_place_holder">Message</string>
    <string name="address_place_holder">Enter your address</string>
    <string name="name_place_holder">Enter your name*
    </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign out</string>
    <string name="repair_history">Repair History</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="reward_points">Reward Points</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fb_login_protocol_scheme">782457638589342</string>
    <string name="fb_id">782457638589342</string>
    <!--sign up hints-->
    <string name="full_name">Name</string>
    <string name="enter_addresss">Enter Your Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="contact_number_hint">Phone no (03*********)</string>
    <string name="gender_hint">Gender</string>
    <string name="customer_area_hint">Customer Area</string>
    <string name="address_hint">Address</string>
    <string name="shipping_address_hint">Shipping Address</string>

    <!--Sign up-->
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="id">ID</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="recomended">Recomended</string>
    <string name="complain">Complain</string>

    <string name="model">Model</string>
    <string name="amount_history">Amount History</string>
    <string name="city">City:</string>
    <string name="email_hint">Email</string>
    <string name="dob">Birthday</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="gender">Gender:</string>
    <string name="selected_area">Your Selected Area</string>
    <string name="customer_area">Customer Area:</string>
    <string name="address">Address:</string>
    <string name="mobile_no">Mobile Number:</string>
    <string name="payment_history">Payment History</string>
    <string name="feedback_details">Feedback Details</string>
    <string name="service_details">Services Details</string>
    <string name="shipping_address">Shipping Address:</string>

    <string name="forgetPassword">Forget Password</string>
    <string name="email_message">Please provide  your email address</string>
    <string name="repair_history_message">Repair history will be sent your email address</string>

</resources>
