<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item
        android:id="@+id/my_account"
        android:orderInCategory="100"
        android:title="@string/my_account"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/reward_points"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/reward_points"-->
        <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/bind_email"
        android:orderInCategory="100"
        android:title="@string/repair_history" />
    <item
        android:id="@+id/contact_us"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/settings"-->
        <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />

</menu>
