<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context="com.example.wassa_000.technician.FeedBackFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"

        >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
               >


                <!-- TODO: Update blank fragment layout -->
                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:text="@string/feedback_message"-->
                <!--android:gravity="center"-->
                <!--android:textSize="17sp"-->
                <!--/>-->

                <EditText
                    android:id="@+id/et_name"
                    style="@style/et_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:background="@drawable/et_search"
                    android:hint="@string/name_place_holder" />

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/et_style"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="11"
                    android:background="@drawable/et_search"
                    android:hint="@string/phone_place_holder" />

                <!--<EditText-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/et_email"-->
                <!--android:background="@drawable/et_search"-->
                <!--style="@style/et_style"-->
                <!--android:hint="@string/email_place_holder"-->
                <!--/>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/et_style"
                        android:layout_width="0dp"
                        android:layout_weight="0.4"
                        android:layout_height="wrap_content"
                        android:text="@string/select_city"
                        android:textColor="#000" />

                    <Spinner
                        android:id="@+id/sp_cities"
                        style="@style/sp_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="10sp"
                        android:layout_weight="0.6"
                        android:spinnerMode="dropdown" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/et_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_us"
                        android:layout_weight="0.4"
                        android:textColor="#000" />

                    <Spinner
                        android:id="@+id/sp_rating"
                        style="@style/sp_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="10sp"
                        android:layout_weight="0.6"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <MultiAutoCompleteTextView
                    android:id="@+id/remarks"
                    style="@style/et_style"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@+id/table"
                    android:background="@drawable/et_search"
                    android:gravity="top"
                    android:hint="@string/type_feed_back"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:imeOptions="actionDone"
                    android:padding="5dp"
                    android:scrollbars="vertical" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/et_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_submit"
                    android:textColor="@color/windowBackground" />
            </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</RelativeLayout>